# scraping

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  parse.rs  scraping.rs
