[package]
name = "scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { verson = "1.28.1", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
base64 = "0.21.0"
crc32fast = "1.3.2"
bytes = "1.4.0"
image = "0.24.6"
serde_json = "1.0.96"
futures = "0.3.28"
rayon = "1.7.0"
avif-decode = "0.2.2"
lodepng = { version = "3.5.2", optional = false }
rgb = "0.8.31"